# scrapper-tools

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start-dev.sh
api/: main.py  models.py
api/routes/: emails.py  fetch.py  links.py  parse.py  spider.py
examples/: basic_scrape.py  parse_html.py  quotes_spider.py
scrapper_tools/: __init__.py  cli.py  fetchers.py  spiders.py  utils.py
ui/: .dockerignore  .env.example  Dockerfile  README.md  package.json  proxy.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/emails/: page.tsx
ui/app/fetch/: page.tsx
ui/app/links/: page.tsx
ui/app/parse/: page.tsx
ui/app/spider/: page.tsx
ui/components/: app-shell.tsx  page-header.tsx  result-box.tsx
ui/lib/: api.ts
