[project]
name = "scrapper-tools"
version = "0.1.0"
description = "A mini web scraping toolkit powered by Scrapling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapling[fetchers]>=0.2.9",
]

[project.scripts]
scrapper-tools = "scrapper_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
